fix: address PR #76 reviewer comments
Agent-Logs-Url: https://github.com/Mika3578/habitv/sessions/99977f69-e4f1-48af-b351-8a53cc82314a

Co-authored-by: Mika3578 <58137747+Mika3578@users.noreply.github.com>